# Meteo

./: devcontainer.json  pyproject.toml  requirement..txt  requirements.txt
.history/: Procfile_20241104080818  Procfile_20241104204356  Procfile_20241105103903  Procfile_20241107094154  Procfile_20241107094650  Procfile_20241107094651  Procfile_20241107095905  README_20241107102419.md  README_20241107102420.md  README_20241107102440.md  README_20241107102500.md  README_20241107102502.md  README_20241107102524.md  README_20241107102525.md  README_20241107102526.md  README_20241107102527.md  README_20241107102528.md  README_20241107102529.md  README_20241107102530.md  README_20241107102534.md  README_20241107102535.md  README_20241107102536.md  README_20241107102537.md  README_20241107102538.md  README_20241107102539.md  README_20241107102544.md  README_20241107102545.md  README_20241107102546.md  README_20241107102547.md  README_20241107102548.md  README_20241107102550.md  README_20241107102551.md  README_20241107102556.md  README_20241107102557.md  README_20241107102649.md  README_20241107102650.md  README_20241107102651.md  README_20241107102652.md  README_20241107102934.md  README_20241107102936.md  (+17 more)
Meteo/: models.py  views.py
Meteo/migrations/: 0003_rename_ville_codeinse_town.py  0004_rename_town_codeinse_ville.py  0005_rename_ville_codeinse_town.py
Meteo/templates/: About.html  Accueil.html
MeteoDjango/: Dockerfile  README.md  data.txt  db.sqlite3  insert_data.py  replit_zip_error_log.txt
MeteoDjango (1)/Meteo/: urls.py
django_project/: settings.py
(+566 files in other folders)
